@@ -1,3 +1,5 @@
+* infit and outfit stats in itemfit() now work for Rasch parital credit and rating scale models
+
 * Rasch rating scale models can now be estimated with potential rsm.blocks (same as grsm model). 
   "Generalized" rating scale models can also be estimated, though this requires manipulating the 
   starting values directly
